kubernetes/keycloak/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
    spec:
      containers:
        - name: keycloak
          resources:
            limits:
              memory: '512Mi'
              cpu: '500m'
            requests:
              memory: '256Mi'
              cpu: '250m'
          image: quay.io/keycloak/keycloak:22.0.3
          args: [
            "start",
            "--metrics-enabled=true",
            "--db postgres",
            "--db-url-host $(DB_HOST)",
            "--db-username $(DB_USER)",
            "--db-password $(DB_PASSWORD)"
          ]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
