kubernetes/keycloak/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  externalName: "92.170.32.207"
  selector:
    app: keycloak
  type: ExternalName
