kubernetes/keycloak/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.nas.dogeek.me
    external-dns.alpha.kubernetes.io/target: nas.dogeek.me
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  tls:
    - hosts:
        - auth.nas.dogeek.me
      secretName: keycloak-cert-prod
  rules:
    - host: auth.nas.dogeek.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
